# veld

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .releaserc.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ENVIRONMENTS_AND_RUNS.md  FEEDBACK_REDESIGN.md  INTERACTIVE_TOOLS_MANIFEST.md  LICENSE  PLAN-p2p-implementation.md  PLAN.md  PRD.md  README.md  RFC-p2p-sharing.md  SHARING_V2.md  THIRD-PARTY-LICENSES.md  about.hbs  about.toml  install.sh  justfile  release-please-config.json  veld.json
.claude/skills/: veld  veld-launch-feedback-loop
.claude/skills/ship/: SKILL.md
.github/workflows/: ci.yml  release.yml
caddy/inject/: go.mod  inject.go  inject_test.go
crates/veld/: Cargo.toml
crates/veld-core/: Cargo.toml
crates/veld-core/src/: config.rs  feedback.rs  graph.rs  health.rs  helper.rs  instance.rs  lib.rs  logging.rs  orchestrator.rs  paths.rs  port.rs  process.rs  progress.rs  sensitive.rs  setup.rs  share.rs  state.rs  stats.rs  url.rs  user_path.rs  variables.rs
crates/veld-core/src/db/: feedback.rs  import.rs  kv.rs  logs.rs  mod.rs  state.rs  stats.rs  worktrees.rs
crates/veld-daemon/: Cargo.toml  build.rs
crates/veld-daemon/assets/: .gitignore  client-log.js  draw-overlay.js  feedback-overlay.css  feedback-overlay.js  management-ui.html
crates/veld-daemon/frontend/: build.mjs  package-lock.json  package.json  tsconfig.json
crates/veld-daemon/frontend/dev/: index.html
crates/veld-daemon/frontend/src/: feedback-overlay.css  global.d.ts
crates/veld-daemon/frontend/src/client-log/: formatter.ts  index.ts  types.ts
crates/veld-daemon/frontend/src/draw-overlay/: blur.ts  color.ts  composite.ts  geometry.ts  hit-test.ts  index.ts  shapes.ts  store.ts  types.ts
crates/veld-daemon/frontend/src/feedback-overlay/: api.ts  arc-menu.ts  backdrop.ts  badge.ts  component-trace.ts  constants.ts  controls-renderer.ts  dom.ts  draw-mode.ts  fab.ts  helpers.ts  index.ts  init.ts  keyboard.ts  listening.ts  modes.ts  navigation.ts  panel.ts  persist.ts  pins.ts  polling.ts  popover.ts  public-url.ts  refs.ts  screenshot.ts  sharing.ts  state.ts  store.ts  styles.ts  toast.ts  toolbar.ts  tooltip.ts  types.ts  visibility.ts  web-share.ts  xy-pad.ts
crates/veld-daemon/frontend/src/shared/: controls.ts  create-store.ts  dom.ts  number-scrub.ts  registry.ts  use-veld-control.example.ts
crates/veld-daemon/frontend/tests/: api.test.ts  badge.test.ts  build-dom.test.ts  color.test.ts  component-trace.test.ts  controls-renderer.test.ts  controls.test.ts  create-store.test.ts  draw-exit.test.ts  draw-store.test.ts  formatter.test.ts  geometry.test.ts  helpers-extra.test.ts  helpers.test.ts  hit-test.test.ts  keyboard.test.ts  mode-close.test.ts  modes.test.ts  number-scrub.test.ts  panel.test.ts  persist.test.ts  pins.test.ts  polling.test.ts  popover-submit.test.ts  popover.test.ts  public-url.test.ts  registry.test.ts  screenshot.test.ts  shapes.test.ts  sharing.test.ts  state.test.ts  store-panel-side.test.ts  store.test.ts  test-helpers.ts  toolbar-overflow.test.ts  tooltip.test.ts  web-share.test.ts  wiring.test.ts  xy-pad.test.ts  zero-friction-draw.test.ts  (+1 more)
crates/veld-daemon/src/: broadcaster.rs  desktop.rs  feedback_assets.rs  feedback_server.rs  gc.rs  main.rs  management.rs  monitor.rs  stats.rs
crates/veld-daemon/src/share/: api.rs  endpoint.rs  forward.rs  gateway.rs  host.rs  join.rs  manager.rs  mod.rs  proto.rs  token_store.rs
crates/veld-daemon/ui/: index.html  package-lock.json  package.json  vite.config.ts
crates/veld-daemon/ui/src/: App.tsx  api.ts  main.tsx  model.test.ts  model.ts  styles.css  theme.ts
crates/veld-daemon/ui/src/components/: ContextMenu.tsx  Wordmark.tsx  dialogs.tsx
crates/veld-daemon/ui/src/runs/: EnvCard.tsx  LogsPanel.tsx  RunsMode.tsx  util.ts
crates/veld-gateway/: Cargo.toml  Dockerfile
crates/veld-gateway/src/: api.rs  auth.rs  config.rs  lib.rs  main.rs  pages.rs  proxy.rs  registry.rs  server.rs  slug.rs  state.rs  tunnel.rs
crates/veld-gateway/tests/: loopback.rs
crates/veld-helper/: Cargo.toml
crates/veld-helper/src/: caddy.rs  dns.rs  handler.rs  main.rs  protocol.rs
crates/veld-share/: Cargo.toml
crates/veld-share/src/: endpoint.rs  forward.rs  host.rs  lib.rs  status.rs
crates/veld/src/: hints.rs  main.rs  output.rs
crates/veld/src/commands/: action.rs  config.rs  doctor.rs  feedback.rs  gc.rs  graph.rs  init.rs  list.rs  logs.rs  mod.rs  nodes.rs  postico.rs  presets.rs  restart.rs  runs.rs  setup.rs  share.rs  start.rs  status.rs  stop.rs  ui.rs  uninstall.rs  update.rs  urls.rs  version.rs
crates/veld/src/commands/setup/: hammerspoon.rs  mod.rs  privileged.rs  status.rs  unprivileged.rs
desktop/: ARCHITECTURE.md  package-lock.json  package.json
desktop/src/: main.js  preload.js
docs/: agentic-review.md  branding.md  client-side-devtools-manifest.md  configuration.md  gateway.md  scenarios.md
integrations/hammerspoon/: veld.lua
integrations/hammerspoon/Veld.spoon/: init.lua
presentation/: index.html
schema/v1/: veld.schema.json
schema/v2/: veld.schema.json
skills/veld/: SKILL.md
skills/veld-config/: SKILL.md
skills/veld-feedback/: SKILL.md
skills/veld-launch-feedback-loop/: SKILL.md
skills/veld-usage/: SKILL.md
skills/veld/reference/: config.md  feedback.md  install.md  troubleshooting.md
skills/veld/templates/: use-veld-control.react.tsx  use-veld-control.vue.ts  veld-control.jquery.js  veld-control.vanilla.js
testproject/: veld.json
testproject-nextjs/: package-lock.json  package.json  veld.json
testproject-nextjs/app/: layout.js  page.js
testproject-nextjs/app/streaming/: page.js
testproject/backend/: server.py
testproject/frontend/: server.py
tests/: integration.sh  test-injection.sh  validate-schema.sh
website/: AGENTS.md  Dockerfile  agents.html  humans.html  index.html  llms-full.txt  llms.txt  nginx.conf  robots.txt
