[workspace]
members = [
    "crates/veld-core",
    "crates/veld",
    "crates/veld-helper",
    "crates/veld-daemon",
]
resolver = "2"

[workspace.package]
version = "6.5.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
veld-core = { path = "crates/veld-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
slug = "0.1"
dirs = "6"
nix = { version = "0.29", features = ["signal", "process", "net", "fs"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
sha2 = "0.10"
base64 = "0.22"
petname = "2"
indicatif = "0.17"
