[package]
name = "veld-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
slug = { workspace = true }
dirs = { workspace = true }
nix = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
petname = { workspace = true }
