[package]
name = "veld-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "veld-gateway"
path = "src/main.rs"

[dependencies]
veld-core = { workspace = true }
veld-share = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
iroh = { workspace = true }
iroh-tickets = { workspace = true }
