[package]
name = "veld-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "veld-gateway"
path = "src/main.rs"

[dependencies]
veld-core = { workspace = true }
veld-share = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
iroh = { workspace = true }
iroh-tickets = { workspace = true }
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
data-encoding = "2"

[dev-dependencies]
tempfile = "3"
uuid = { workspace = true }
reqwest = { workspace = true }
