[package]
name = "veld-helper"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Privileged helper daemon for Veld – manages DNS, Caddy routes, and the Caddy process"

[[bin]]
name = "veld-helper"
path = "src/main.rs"

[dependencies]
veld-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
nix.workspace = true
reqwest.workspace = true
