[package]
name = "veld-share"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
veld-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
iroh = { workspace = true }
iroh-tickets = { workspace = true }

[dev-dependencies]
tempfile = "3"
uuid = { workspace = true }
